# Software-Engineering-assigment-2

./: CMakeLists.txt  main.cpp
test/: calculator.cpp  calculator.h  test.cpp
